minio/base/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio-dev
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: minio-api
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: minio-webui
  type: ClusterIP
